2008-04-09  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: gail is no more an individual module in 2.24.

2008-04-09  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: New Balochi Team.
	* releases.xml.in: Added GNOME 2.24 release.

2008-04-07  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: gnome-utils shipped 2-20 branch in GNOME 2.22.

2008-04-04  Jordi Mallach  <jordi@sindominio.net>

	* translation-teams.xml.in: Add "ca@valencia" as a new id for
	the Catalan team.

2008-04-04  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Unsetting meld docs path because it is not
	gnome-doc-utils compliant.
	* releases.xml.in: Added new module policykit-gnome.

2008-04-02  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: seahorse branched for 2.22.
	Changed comment (link to TP) for freedesktop modules.
	* releases.xml.in: seahorse branched for 2.22.

2008-03-30  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-icon-theme branched for 2.22.

2008-03-28  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: nautilus, eel and gvfs branched for 2.22.

2008-03-28  Claude Paroz  <claude@2xlibre.net>

	* templates/module.tmpl: Add a link to show i18n and l10n bugs.
	* templates/language-release.tmpl:
	* templates/team.tmpl: Don't show closed bugs in Bugzilla link.
	Fixes bug #524752.

2008-03-28  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-settings-daemon and gnome-control-center branched
	for 2.22.

2008-03-25  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Removed unnecessary translation for variable.
	* templates/index.tmpl: Add translator comment for translator-credits.
	* templates/module.tmpl: Removed extra space.
	Fixes bug #524215.
	* templates/show-stats.tmpl: Added translator comments.
	Fixes bug #475579.

2008-03-24  Claude Paroz  <claude@2xlibre.net>
