@@ -1278,11 +1278,12 @@
     <branch id="HEAD"/>
   </module>
   <module id="libgnome">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
+    <branch id="gnome-2-22" stringfrozen="true"/>
   </module>
   <module id="libgnomecanvas">
     <branch id="HEAD" stringfrozen="true"/>
