@@ -548,7 +548,7 @@
       <module id="gtk+" branch="gtk-2-12"/>
       <module id="libbonobo"/>
       <module id="libbonoboui"/>
-      <module id="libgnome"/>
+      <module id="libgnome" branch="gnome-2-22"/>
       <module id="libgnomecanvas"/>
       <module id="libgnomeui"/>
     </category>
