@@ -1,3 +1,9 @@
+2008-04-10  Johannes Schmid <jhs@gnome.org>
+
+	* releases.xml.in:
+	* gnome-modules.xml.in:
+	libgnome branched for gnome-2-22
+
 2008-04-09  Claude Paroz  <claude@2xlibre.net>
 
 	* releases.xml.in: gail is no more an individual module in 2.24.
